# VSF_AI-Intelligent-Agent-For-PM

./: .env.example  .gitignore  AI_Project_Intelligence_Agent_Plan.md  README.md  TECH_REPORT.md  THUYET_TRINH_DEMO.md  config.py  project_status_audit.md  pyproject.toml  requirements.txt  run_agent.sh
data/: vault.db
data/chroma/: chroma.sqlite3
data/confluence/: confluence_synthetic.json
data/jira/: jira_data_sources.json  jira_field_information.json  jira_issuelinktype_information.json  jira_issuetype_information.json  jira_issuetype_thematic_analysis.json
data/meeting_notes/: meeting_notes.json
src/: exporters.py  main.py  run_agent.py
src/agent/: core.py
src/agents/: concern_engine.py  report_agent.py  report_pipeline.py  tools.py
src/guardrail/: sanitizer.py
src/ingestion/: confluence_connector.py  entity_extractor.py  jira_connector.py  meeting_notes_connector.py  run_pipeline.py
src/mcp/: __init__.py  server.py
src/memory/: store.py
src/storage/: chroma_store.py  init_db.py  sqlite_store.py
src/tools/: registry.py
tests/: conftest.py  test_agent.py  test_chunking.py  test_concern_engine.py  test_confluence_connector.py  test_entity_extractor.py  test_exporters.py  test_guardrail.py  test_ingestion_integration.py  test_ingestion_pipeline.py  test_jira_connector.py  test_mcp_server.py  test_meeting_notes_connector.py  test_report_agent.py  test_run_pipeline.py
